--- a/src/content/projects/bpcldigitalplatform.mdx
+++ b/src/content/projects/bpcldigitalplatform.mdx
@@ -2,8 +2,9 @@
 key: 1
 title: Digital Platform
 description: An initiative by BPCL Piyala station. A platform to replace paper based system by an easy, user-friendly, reliable, secured and advanced digital system.
-link: https://github.com/dchobarkar?tab=repositories
-github: https://github.com/dchobarkar?tab=repositories
+link: https://github.com/dchobarkar/BPCL-Digital-Platform-client
+github: https://github.com/dchobarkar/BPCL-Digital-Platform-client
 languages:
+  - Node.js
   - Javascript
 ---
