--- a/src/content/projects/bpclanalyticalsystem.mdx
+++ b/src/content/projects/bpclanalyticalsystem.mdx
@@ -2,8 +2,8 @@
 key: 2
 title: Analytical Platform
 description: An initiative by BPCL Piyala station. An analytical tool to investigate the vast amount of data received by the Region Head everyday.
-link: https://github.com/dchobarkar?tab=repositories
-github: https://github.com/dchobarkar?tab=repositories
+link: https://github.com/dchobarkar/BPCL-Analytical-System-client
+github: https://github.com/dchobarkar/BPCL-Analytical-System-client
 language:
   - Node.js
   - Javascript
